Give tab__inner proper position so it wraps its contents correctly

--- a/stylesheets/_tabs.scss
+++ b/stylesheets/_tabs.scss
@@ -106,6 +106,8 @@
   background-color: $white;
   border: 1px solid $gray;
   box-shadow: -3px 1px 3px rgba(0, 0, 0, 0.05);
+  float: left;
+  width: 100%;
 }
 
 .tab__main {
